Add Google Analytics code

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Google tag (gtag.js) -->
 		<script
 			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-9D86T2MFKP"
+			src="https://www.googletagmanager.com/gtag/js?id=G-1S6LS7MH8K"
 		></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
@@ -13,7 +13,7 @@
 			}
 			gtag('js', new Date());
 
-			gtag('config', 'G-9D86T2MFKP');
+			gtag('config', 'G-1S6LS7MH8K');
 		</script>
 		<!-- favicon -->
 		<link
